[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/point_to_hex_outline.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/point_top_hex.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Font Awesome 6 Free-Solid-900.otf" type="DynamicFontData" id=3]
[ext_resource path="res://src/combat/map_hex.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="MapHex" type="Spatial"]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0, 0, 0 )
script = ExtResource( 4 )
scan_icon = ""
control_icon = ""
spawn_icon = ""

[node name="Ships" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 8.35189e-23, 0, 8.35188e-23, 1, 0, 0, 0 )

[node name="Markers" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 8.35189e-23, 0, 8.35188e-23, 1, 0, 0, 0 )

[node name="PlayerScanMark" type="Spatial" parent="Markers"]
transform = Transform( 1, 0, 0, 0, 1, 8.35189e-23, 0, 8.35188e-23, 1, -0.978202, -0.482962, -2.11109e-08 )
visible = false

[node name="Background" type="Sprite3D" parent="Markers/PlayerScanMark"]
transform = Transform( 0.2, 0, 0, 0, 0.2, -8.35188e-23, 0, 1.67038e-23, 1, 0, 0, 0 )
modulate = Color( 0.101961, 0.482353, 0.815686, 1 )
texture = ExtResource( 2 )

[node name="Icon" type="Label3D" parent="Markers/PlayerScanMark"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.01 )
no_depth_test = true
text = " 0"
font = SubResource( 1 )

[node name="PlayerSpawnMark" type="Spatial" parent="Markers"]
transform = Transform( 1, 0, 0, 0, 1, 8.35189e-23, 0, 8.35188e-23, 1, 0.978, -0.483, 0 )
visible = false

[node name="Background" type="Sprite3D" parent="Markers/PlayerSpawnMark"]
transform = Transform( 0.2, 0, 0, 0, 0.2, -8.35188e-23, 0, 1.67038e-23, 1, 0, 0, 0 )
modulate = Color( 0.101961, 0.482353, 0.815686, 1 )
texture = ExtResource( 2 )

[node name="Icon" type="Label3D" parent="Markers/PlayerSpawnMark"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.01 )
no_depth_test = true
text = ""
font = SubResource( 1 )

[node name="PlayerControlMark" type="Spatial" parent="Markers"]
transform = Transform( 1, 0, 0, 0, 1, 8.35189e-23, 0, 8.35188e-23, 1, -2.09346e-08, -0.961928, -2.09346e-08 )
visible = false

[node name="Background" type="Sprite3D" parent="Markers/PlayerControlMark"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 8.35189e-23, 0, 1.67038e-23, 1, -2.4645e-10, -0.00563788, -2.4645e-10 )
modulate = Color( 0.101961, 0.482353, 0.815686, 1 )
texture = ExtResource( 2 )

[node name="Icon" type="Label3D" parent="Markers/PlayerControlMark"]
transform = Transform( 1, 0, 0, 0, 1, 8.35189e-23, 0, 8.35188e-23, 1, 0, 0, 0.01 )
no_depth_test = true
text = ""
font = SubResource( 1 )

[node name="EnemyScanMark" type="Spatial" parent="Markers"]
transform = Transform( 1, 0, 0, 0, 1, 8.35189e-23, 0, 8.35188e-23, 1, 0.97258, 0.47881, 2.09294e-08 )
visible = false

[node name="Background" type="Sprite3D" parent="Markers/EnemyScanMark"]
transform = Transform( 0.2, 0, 0, 0, 0.2, -8.35188e-23, 0, 1.67038e-23, 1, 0, 0, 0 )
modulate = Color( 0.788235, 0.0980392, 0.027451, 1 )
texture = ExtResource( 2 )

[node name="Icon" type="Label3D" parent="Markers/EnemyScanMark"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.01 )
no_depth_test = true
text = " 0"
font = SubResource( 1 )

[node name="EnemySpawnMark" type="Spatial" parent="Markers"]
transform = Transform( 1, 0, 0, 0, 1, 8.35189e-23, 0, 8.35188e-23, 1, -0.978, 0.483, 0 )
visible = false

[node name="Background" type="Sprite3D" parent="Markers/EnemySpawnMark"]
transform = Transform( 0.2, 0, 0, 0, 0.2, -8.35188e-23, 0, 1.67038e-23, 1, 0, 0, 0 )
modulate = Color( 0.788235, 0.0980392, 0.027451, 1 )
texture = ExtResource( 2 )

[node name="Icon" type="Label3D" parent="Markers/EnemySpawnMark"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.01 )
no_depth_test = true
text = ""
font = SubResource( 1 )

[node name="EnemyControlMark" type="Spatial" parent="Markers"]
transform = Transform( 1, 0, 0, 0, 1, 8.35189e-23, 0, 8.35188e-23, 1, 1.86102e-10, 0.967257, 1.86102e-10 )
visible = false

[node name="Background" type="Sprite3D" parent="Markers/EnemyControlMark"]
transform = Transform( 0.2, 0, 0, 0, 0.2, -8.35188e-23, 0, 1.67038e-23, 1, 0, 0, 0 )
modulate = Color( 0.788235, 0.0980392, 0.027451, 1 )
texture = ExtResource( 2 )

[node name="Icon" type="Label3D" parent="Markers/EnemyControlMark"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.01 )
no_depth_test = true
text = ""
font = SubResource( 1 )

[node name="HexBorder" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 8.35189e-23, 0, 8.35188e-23, 1, 0, 0, 0 )
double_sided = false
texture = ExtResource( 1 )

[node name="HexFill" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, -8.35187e-23, 0, 4.17594e-23, 1, 0, 0, 0.06 )
visible = false
texture = ExtResource( 2 )

[node name="CoordLabel" type="Label3D" parent="."]
text = "(x, y)"
